@@ -18,46 +18,6 @@ require_once(SM_PATH . 'functions/imap_utf7_local.php');
 
 global $boxesnew;
 
-class mailboxes {
-    var $mailboxname_full = '', $mailboxname_sub= '', $is_noselect = false,
-        $is_special = false, $is_root = false, $is_inbox = false, $is_sent = false,
-        $is_trash = false, $is_draft = false,  $mbxs = array(),
-        $unseen = false, $total = false;
-
-    function addMbx($mbx, $delimiter, $start, $specialfirst) {
-        $ary = explode($delimiter, $mbx->mailboxname_full);
-        $mbx_parent = &$this;
-        for ($i = $start, $c = count($ary)-1; $i < $c; $i++) {
-            $mbx_childs = &$mbx_parent->mbxs;
-            $found = false;
-            if ($mbx_childs) {
-                foreach ($mbx_childs as $key => $parent) {
-                    if ($parent->mailboxname_sub == $ary[$i]) {
-                        $mbx_parent = &$mbx_parent->mbxs[$key];
-                        $found = true;
-                    }
-                }
-            }
-            if (!$found) {
-                $no_select_mbx = new mailboxes();
-                if (isset($mbx_parent->mailboxname_full) && $mbx_parent->mailboxname_full != '') {
-                    $no_select_mbx->mailboxname_full = $mbx_parent->mailboxname_full.$delimiter.$ary[$i];
-                } else {
-                    $no_select_mbx->mailboxname_full = $ary[$i];
-                }
-                $no_select_mbx->mailboxname_sub = $ary[$i];
-                $no_select_mbx->is_noselect = true;
-                $mbx_parent->mbxs[] = $no_select_mbx;
-                $i--;
-            }
-        }
-        $mbx_parent->mbxs[] = $mbx;
-        if ($mbx->is_special && $specialfirst) {
-            usort($mbx_parent->mbxs, 'sortSpecialMbx');
-        }
-    }
-}
-
 function sortSpecialMbx($a, $b) {
     if ($a->is_inbox) {
         $acmp = '0'. $a->mailboxname_full;
@@ -791,202 +751,6 @@ function sqimap_mailbox_list_all($imap_stream) {
     }
 
     return $boxes;
-}
-
-function sqimap_mailbox_tree($imap_stream) {
-    global $boxesnew, $default_folder_prefix, $unseen_notify, $unseen_type;
-    if (!isset($boxesnew)) {
-
-        global $data_dir, $username, $list_special_folders_first,
-               $folder_prefix, $delimiter, $trash_folder, $move_to_trash;
-
-
-        $inbox_in_list = false;
-        $inbox_subscribed = false;
-
-        require_once(SM_PATH . 'include/load_prefs.php');
-
-        /* LSUB array */
-        $lsub_ary = sqimap_run_command ($imap_stream, "LSUB \"$folder_prefix\" \"*\"",
-                                        true, $response, $message);
-
-        /*
-         * Section about removing the last element was removed
-         * We don't return "* OK" anymore from sqimap_read_data
-         */
-        $sorted_lsub_ary = array();
-        $cnt = count($lsub_ary);
-        for ($i = 0; $i < $cnt; $i++) {
-            /*
-             * Workaround for EIMS
-             * Doesn't work if the mailbox name is multiple lines
-             */
-            if (isset($lsub_ary[$i + 1]) &&
-                ereg("^(\\* [A-Z]+.*)\\{[0-9]+\\}([ \n\r\t]*)$",
-                     $lsub_ary[$i], $regs)) {
-                $i++;
-                $lsub_ary[$i] = $regs[1] . '"' . addslashes(trim($lsub_ary[$i])) . '"' . $regs[2];
-            }
-
-            /*
-            if (preg_match("/^\*\s+LSUB\s+\((.*)\)\s+\"(.*)\"\s+\"?(.+(?=\")|.+).*$/",$lsub_ary[$i],$regs)) {
-                $flag = $regs[1];
-                $mbx = trim($regs[3]);
-                $sorted_lsub_ary[] = array ('mbx' => $mbx, 'flag' => $flag);
-            }
-            */
-            $mbx = find_mailbox_name($lsub_ary[$i]);
-            $noselect = check_is_noselect($lsub_ary[$i]);
-            if (substr($mbx, -1) == $delimiter) {
-                $mbx = substr($mbx, 0, strlen($mbx) - 1);
-            }
-            $sorted_lsub_ary[] = array ('mbx' => $mbx, 'noselect' => $noselect);
-        }
-        array_multisort($sorted_lsub_ary, SORT_ASC, SORT_REGULAR);
-
-        for($i = 0; $i < $cnt; $i++) {
-            if ($sorted_lsub_ary[$i]['mbx'] == 'INBOX') {
-                $inbox_in_list = true;
-                break;
-            }
-        }
-
-        /*
-         * Just in case they're not subscribed to their inbox,
-         * we'll get it for them anyway
-         */
-        if (!$inbox_in_list) {
-            $inbox_ary = sqimap_run_command ($imap_stream, "LIST \"\" \"INBOX\"",
-                                             true, $response, $message);
-            /* Another workaround for EIMS */
-            if (isset($inbox_ary[1]) &&
-                ereg("^(\\* [A-Z]+.*)\\{[0-9]+\\}([ \n\r\t]*)$",
-                     $inbox_ary[0], $regs)) {
-                $inbox_ary[0] = $regs[1] . '"' . addslashes(trim($inbox_ary[1])) .
-                                '"' . $regs[2];
-            }
-            $mbx = find_mailbox_name($inbox_ary[0]);
-            if (substr($mbx, -1) == $delimiter) {
-                $mbx = substr($mbx, 0, strlen($mbx) - 1);
-            }
-            if ($mbx == 'INBOX') {
-                $sorted_lsub_ary[] = array ('mbx' => $mbx, 'flag' => '');
-                sqimap_subscribe($imap_stream, 'INBOX');
-                $cnt++;
-            }
-
-            /*
-            if (preg_match("/^\*\s+LIST\s+\((.*)\)\s+\"(.*)\"\s+\"?(.+(?=\")|.+).*$/",$inbox_ary[0],$regs)) {
-                $flag = $regs[1];
-                $mbx = trim($regs[3]);
-                if (substr($mbx, -1) == $delimiter) {
-                    $mbx = substr($mbx, 0, strlen($mbx) - 1);
-                }
-                $sorted_lsub_ary[] = array ('mbx' => $mbx, 'flag' => $flag);
-            }
-            */
-        }
-        for ($i = 0 ; $i < $cnt; $i++) {
-            $mbx = $sorted_lsub_ary[$i]['mbx'];
-            if (($unseen_notify == 2 && $mbx == 'INBOX') ||
-                ($unseen_notify == 3) ||
-                ($move_to_trash && ($mbx == $trash_folder))) {
-                if($sorted_lsub_ary[$i]['noselect']) {
-                    $sorted_lsub_ary[$i]['unseen'] = 0;
-                } else {
-                    $sorted_lsub_ary[$i]['unseen'] =
-                        sqimap_unseen_messages($imap_stream, $mbx);
-                }
-                if (($unseen_type == 2) ||
-                    ($move_to_trash && ($mbx == $trash_folder)) ||
-                    ($mbx == $trash_folder)) {
-                    if($sorted_lsub_ary[$i]['noselect']) {
-                        $sorted_lsub_ary[$i]['nummessages'] = 0;
-                    } else {
-                        $sorted_lsub_ary[$i]['nummessages'] =
-                            sqimap_get_num_messages($imap_stream, $mbx);
-                    }
-                }
-            }
-        }
-        $boxesnew = sqimap_fill_mailbox_tree($sorted_lsub_ary);
-        return $boxesnew;
-    }
-}
-
-function sqimap_fill_mailbox_tree($mbx_ary, $mbxs=false) {
-    global $data_dir, $username, $list_special_folders_first,
-           $folder_prefix, $trash_folder, $sent_folder, $draft_folder,
-           $move_to_trash, $move_to_sent, $save_as_draft,
-           $delimiter;
-
-    $special_folders = array ('INBOX', $sent_folder, $draft_folder, $trash_folder);
-
-    /* create virtual root node */
-    $mailboxes= new mailboxes();
-    $mailboxes->is_root = true;
-    $trail_del = false;
-
-    if (isset($folder_prefix) && ($folder_prefix != '')) {
-        $start = substr_count($folder_prefix,$delimiter);
-        if (strrpos($folder_prefix, $delimiter) == (strlen($folder_prefix)-1)) {
-            $trail_del = true;
-            $mailboxes->mailboxname_full = substr($folder_prefix,0, (strlen($folder_prefix)-1));
-        } else {
-            $mailboxes->mailboxname_full = $folder_prefix;
-            $start++;
-        }
-        $mailboxes->mailboxname_sub = $mailboxes->mailboxname_full;
-    } else {
-        $start = 0;
-    }
-
-    $cnt =  count($mbx_ary);
-    for ($i=0; $i < $cnt; $i++) {
-        if ($mbx_ary[$i]['mbx'] !='' ) {
-            $mbx = new mailboxes();
-            $mailbox = $mbx_ary[$i]['mbx'];
-            switch ($mailbox) {
-                case 'INBOX':
-                    $mbx->is_inbox = true;
-                    $mbx->is_special = true;
-                    break;
-                case $trash_folder:
-                    $mbx->is_trash = true;
-                    $mbx->is_special = true;
-                    break;
-                case $sent_folder:
-                    $mbx->is_sent = true;
-                    $mbx->is_special = true;
-                    break;
-                case $draft_folder:
-                    $mbx->is_draft = true;
-                    $mbx->is_special = true;
-                    break;
-            }
-
-            if (isset($mbx_ary[$i]['unseen'])) {
-                $mbx->unseen = $mbx_ary[$i]['unseen'];
-            }
-            if (isset($mbx_ary[$i]['nummessages'])) {
-                $mbx->total = $mbx_ary[$i]['nummessages'];
-            }
-
-            $mbx->is_noselect = $mbx_ary[$i]['noselect'];
-
-            $r_del_pos = strrpos($mbx_ary[$i]['mbx'], $delimiter);
-            if ($r_del_pos) {
-                $mbx->mailboxname_sub = substr($mbx_ary[$i]['mbx'],$r_del_pos+1);
-            } else {   /* mailbox is root folder */
-                $mbx->mailboxname_sub = $mbx_ary[$i]['mbx'];
-            }
-            $mbx->mailboxname_full = $mbx_ary[$i]['mbx'];
-
-            $mailboxes->addMbx($mbx, $delimiter, $start, $list_special_folders_first);
-        }
-    }
-
-    return $mailboxes;
 }
 
 ?>
