@@ -114,6 +114,8 @@ Version 1.4.5 - CVS
   - Correct slightly inconsistent behaviour when reading a message with MDN
     (#928954).
   - Fix an off-by-one and a HTML-formatting bug in saved searches.
+  - Remove in-development default-off folder list code from left_main.php.
+  
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
